fix: correção de digitação em description

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span id="title-complement">com um Front-end de qualidade!</span>
           </h1>
           <p id="description">
-            Olá!, Sou Anderson Chaves, desenvolvedor Front-end com
+            Olá! Sou Anderson Chaves, desenvolvedor Front-end com
             especialidades em React, HTML e CSS. Ajudo pequenos negócios e
             designers a colocarem em prática boas ideias. Vamos conversar!
           </p>
