--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
@@ -20,27 +20,30 @@
         <div class="box-descriptions">
           <h1 id="title">
             Eleve seu negócio digital a outro nível
-            <span id="title-complement">com um Front-end de qualidade!</span>
+            <strong id="title-complement"
+              >com um Front-end de qualidade!</strong
+            >
           </h1>
           <p id="description">
-            Olá! Sou Anderson Chaves, desenvolvedor Front-end com
-            especialidades em React, HTML e CSS. Ajudo pequenos negócios e
-            designers a colocarem em prática boas ideias. Vamos conversar!
+            Olá! Sou Anderson Chaves, desenvolvedor Front-end com especialidades
+            em React, HTML e CSS. Ajudo pequenos negócios e designers a
+            colocarem em prática boas ideias. Vamos conversar!
           </p>
         </div>
         <div class="container-button">
           <a
+            id="btn-linkedin"
             href="https://www.linkedin.com/in/developer-anderson-chaves/"
             target="_blank"
           >
-            <button id="btn-linkedin">
-              <img src="./img/linkedin-ico.png" alt="icone-linkedin" />Linkedin
-            </button>
+            <img src="./img/linkedin-ico.png" alt="icone-linkedin" />Linkedin
           </a>
-          <a href="https://github.com/AndersonChavesS" target="_blank">
-            <button id="btn-github">
-              <img src="./img/gitHub-ico.png" alt="" /> GitHub
-            </button>
+          <a
+            id="btn-github"
+            href="https://github.com/AndersonChavesS"
+            target="_blank"
+          >
+            <img src="./img/gitHub-ico.png" alt="" /> GitHub
           </a>
         </div>
       </div>
