fix: trocando tag div para section e trocando font-family dos botoes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <main class="container">
-      <div class="descriptions">
+      <section class="descriptions">
         <div class="box-descriptions">
           <h1 id="title">
             Eleve seu negócio digital a outro nível
@@ -46,7 +46,7 @@
             <img src="./img/gitHub-ico.png" alt="" /> GitHub
           </a>
         </div>
-      </div>
+      </section>
       <img id="img-profile" src="./img/image-profile.jpg" alt="imagem perfil" />
     </main>
   </body>
