refactor: ajustes de responsividade para tablet e mobile

--- a/about.html
+++ b/about.html
@@ -50,6 +50,6 @@
         alt="imagem perfil"
       />
     </main>
-    <footer id="footer"><p>Desenvolvido por Anderson Chaves</p></footer>
+    <footer class="footer"><p>Desenvolvido por Anderson Chaves</p></footer>
   </body>
 </html>
