--- a/curriculum.html
+++ b/curriculum.html
@@ -89,6 +89,6 @@
       />
     </main>
 
-    <footer id="footer"><p>Desenvolvido por Anderson Chaves</p></footer>
+    <footer class="footer"><p>Desenvolvido por Anderson Chaves</p></footer>
   </body>
 </html>
