--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <h2 class="container__presentation__caption">Acesse minhas redes:</h2>
           <div class="container__presentation__buttons__links">
             <a
-              class="container__presentation__buttons__links__link"
+              class="container__presentation__buttons__links__navegation"
               href="https://www.linkedin.com/in/developer-anderson-chaves/"
               target="_blank"
             >
@@ -50,7 +50,7 @@
               />Linkedin
             </a>
             <a
-              class="container__presentation__buttons__links__link"
+              class="container__presentation__buttons__links__navegation"
               href="https://github.com/AndersonChavesS"
               target="_blank"
             >
@@ -65,6 +65,6 @@
         alt="imagem perfil"
       />
     </main>
-    <footer id="footer"><p>Desenvolvido por Anderson Chaves</p></footer>
+    <footer class="footer"><p>Desenvolvido por Anderson Chaves</p></footer>
   </body>
 </html>
