fix: corrigindo tamanho de fontes mobiles e separaçao de classes para imagens

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         </p>
       </section>
       <img
-        class="container__img"
+        class="container__img__profile"
         src="./assets/imagem_perfil.jpg"
         alt="imagem perfil"
       />
