--- a/curriculum.html
+++ b/curriculum.html
@@ -83,7 +83,7 @@
         </ul>
       </section>
       <img
-        class="container__img"
+        class="container__img__profile"
         src="./assets/imagem_perfil.jpg"
         alt="foto de anderson chaves"
       />
